--- a/LectureSrcAndNoteBook/MLaug22/ML2022-09-Deep learning II/09-DeepLearning-II.ipynb
+++ b/LectureSrcAndNoteBook/MLaug22/ML2022-09-Deep learning II/09-DeepLearning-II.ipynb
@@ -1284,12 +1284,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "# import cv2\n",
+    "import matplotlib.pyplot as plt\n",
+    "import cv2\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.cuda as cuda\n",
+    "from torch.autograd import Variable\n",
+    "import torch.nn.functional as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1303,7 +1331,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
