--- a/LectureSrcAndNoteBook/MLaug22/ML2022-09-Deep learning II/09-DeepLearning-II.ipynb
+++ b/LectureSrcAndNoteBook/MLaug22/ML2022-09-Deep learning II/09-DeepLearning-II.ipynb
@@ -58,11 +58,12 @@
    "outputs": [],
    "source": [
     "# for colab only\n",
-    "from google.colab import drive\n",
-    "drive.mount('/content/gdrive')\n",
+    "if False:\n",
+    "    from google.colab import drive\n",
+    "    drive.mount('/content/gdrive')\n",
     "\n",
-    "# Your root path in gdrive\n",
-    "root_path = 'gdrive/My Drive/'"
+    "    # Your root path in gdrive\n",
+    "    root_path = 'gdrive/My Drive/'"
    ]
   },
   {
@@ -79,15 +80,16 @@
    "outputs": [],
    "source": [
     "# for create the folder\n",
-    "import os\n",
+    "if False:\n",
+    "  import os\n",
     "\n",
-    "lab_path =  root_path + 'lab09/'\n",
-    "if not os.path.exists(lab_path):\n",
-    "  print(\"No folder \", lab_path, 'exist. Create the folder')\n",
-    "  os.mkdir(lab_path)\n",
-    "  print(\"Create directory finished\")\n",
-    "else:\n",
-    "  print(lab_path, 'existed, do nothing')"
+    "  lab_path =  root_path + 'lab09/'\n",
+    "  if not os.path.exists(lab_path):\n",
+    "    print(\"No folder \", lab_path, 'exist. Create the folder')\n",
+    "    os.mkdir(lab_path)\n",
+    "    print(\"Create directory finished\")\n",
+    "  else:\n",
+    "    print(lab_path, 'existed, do nothing')"
    ]
   },
   {
