--- a/LectureSrcAndNoteBook/MLaug22/OLD13-Reinforcement-Learning/OLD_13-Reinforcement-Learning/12-Reinforcement-Learning.ipynb
+++ b/LectureSrcAndNoteBook/MLaug22/OLD13-Reinforcement-Learning/OLD_13-Reinforcement-Learning/12-Reinforcement-Learning.ipynb
@@ -4178,7 +4178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4195,6 +4195,7 @@
     "    def sample(self, batch_size):\n",
     "        state, action, reward, next_state, done = zip(*random.sample(self.buffer, batch_size))\n",
     "        # print(state)\n",
+    "        # return state, action, reward, next_state, done\n",
     "        return np.concatenate(state), action, reward, np.concatenate(next_state), done\n",
     "        \n",
     "\n",
@@ -4224,7 +4225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4266,7 +4267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4293,7 +4294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4346,7 +4347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4374,7 +4375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4435,29 +4436,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Agent training (episode33) Avg Reward 0.9696969696969697:   0%|          | 32/10001 [00:00<00:18, 529.17it/s]\n"
+      "Agent training (episode11) Avg Reward 0.9090909090909091:   0%|          | 0/10001 [00:00<?, ?it/s]/tmp/ipykernel_16130/2776276185.py:19: UserWarning: volatile was removed and now has no effect. Use `with torch.no_grad():` instead.\n",
+      "  state = autograd.Variable(torch.FloatTensor(state).unsqueeze(0), volatile=True).to(device)\n",
+      "Agent training (episode33) Avg Reward 0.9696969696969697:   0%|          | 32/10001 [00:00<00:19, 501.92it/s]\n"
      ]
     },
     {
      "ename": "ValueError",
-     "evalue": "all the input array dimensions for the concatenation axis must match exactly, but along dimension 1, the array at index 0 has size 4 and the array at index 23 has size 2",
+     "evalue": "all the input array dimensions for the concatenation axis must match exactly, but along dimension 1, the array at index 0 has size 4 and the array at index 19 has size 2",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [136], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model,all_rewards, losses \u001b[39m=\u001b[39m train(env, model, eps_by_episode, optimizer, replay_buffer, episodes \u001b[39m=\u001b[39;49m \u001b[39m10000\u001b[39;49m, batch_size\u001b[39m=\u001b[39;49m\u001b[39m32\u001b[39;49m, gamma \u001b[39m=\u001b[39;49m \u001b[39m0.99\u001b[39;49m)\n",
-      "Cell \u001b[0;32mIn [135], line 40\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(env, model, eps_by_episode, optimizer, replay_buffer, episodes, batch_size, gamma)\u001b[0m\n\u001b[1;32m     37\u001b[0m     \u001b[39m# Train on a batch if we've got enough experience\u001b[39;00m\n\u001b[1;32m     38\u001b[0m     \u001b[39m# print(len(replay_buffer))\u001b[39;00m\n\u001b[1;32m     39\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(replay_buffer) \u001b[39m>\u001b[39m batch_size:\n\u001b[0;32m---> 40\u001b[0m         loss \u001b[39m=\u001b[39m compute_td_loss(model, batch_size, gamma)\n\u001b[1;32m     41\u001b[0m         losses\u001b[39m.\u001b[39mappend(loss\u001b[39m.\u001b[39mitem())\n\u001b[1;32m     43\u001b[0m plot(episode, all_rewards, losses)  \n",
-      "Cell \u001b[0;32mIn [133], line 4\u001b[0m, in \u001b[0;36mcompute_td_loss\u001b[0;34m(model, batch_size, gamma)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcompute_td_loss\u001b[39m(model, batch_size, gamma\u001b[39m=\u001b[39m\u001b[39m0.99\u001b[39m):\n\u001b[1;32m      2\u001b[0m \n\u001b[1;32m      3\u001b[0m     \u001b[39m# Get batch from replay buffer\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m     state, action, reward, next_state, done \u001b[39m=\u001b[39m replay_buffer\u001b[39m.\u001b[39;49msample(batch_size)\n\u001b[1;32m      6\u001b[0m     \u001b[39m# Convert to tensors. Creating Variables is not necessary with more recent PyTorch versions.\u001b[39;00m\n\u001b[1;32m      7\u001b[0m     state      \u001b[39m=\u001b[39m autograd\u001b[39m.\u001b[39mVariable(torch\u001b[39m.\u001b[39mFloatTensor(np\u001b[39m.\u001b[39mfloat32(state)))\u001b[39m.\u001b[39mto(device)\n",
-      "Cell \u001b[0;32mIn [130], line 14\u001b[0m, in \u001b[0;36mReplayBuffer.sample\u001b[0;34m(self, batch_size)\u001b[0m\n\u001b[1;32m     12\u001b[0m state, action, reward, next_state, done \u001b[39m=\u001b[39m \u001b[39mzip\u001b[39m(\u001b[39m*\u001b[39mrandom\u001b[39m.\u001b[39msample(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbuffer, batch_size))\n\u001b[1;32m     13\u001b[0m \u001b[39m# print(state)\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39;49mconcatenate(state), action, reward, np\u001b[39m.\u001b[39mconcatenate(next_state), done\n",
+      "Cell \u001b[0;32mIn [167], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m model,all_rewards, losses \u001b[39m=\u001b[39m train(env, model, eps_by_episode, optimizer, replay_buffer, episodes \u001b[39m=\u001b[39;49m \u001b[39m10000\u001b[39;49m, batch_size\u001b[39m=\u001b[39;49m\u001b[39m32\u001b[39;49m, gamma \u001b[39m=\u001b[39;49m \u001b[39m0.99\u001b[39;49m)\n",
+      "Cell \u001b[0;32mIn [166], line 40\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(env, model, eps_by_episode, optimizer, replay_buffer, episodes, batch_size, gamma)\u001b[0m\n\u001b[1;32m     37\u001b[0m     \u001b[39m# Train on a batch if we've got enough experience\u001b[39;00m\n\u001b[1;32m     38\u001b[0m     \u001b[39m# print(len(replay_buffer))\u001b[39;00m\n\u001b[1;32m     39\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(replay_buffer) \u001b[39m>\u001b[39m batch_size:\n\u001b[0;32m---> 40\u001b[0m         loss \u001b[39m=\u001b[39m compute_td_loss(model, batch_size, gamma)\n\u001b[1;32m     41\u001b[0m         losses\u001b[39m.\u001b[39mappend(loss\u001b[39m.\u001b[39mitem())\n\u001b[1;32m     43\u001b[0m plot(episode, all_rewards, losses)  \n",
+      "Cell \u001b[0;32mIn [164], line 4\u001b[0m, in \u001b[0;36mcompute_td_loss\u001b[0;34m(model, batch_size, gamma)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcompute_td_loss\u001b[39m(model, batch_size, gamma\u001b[39m=\u001b[39m\u001b[39m0.99\u001b[39m):\n\u001b[1;32m      2\u001b[0m \n\u001b[1;32m      3\u001b[0m     \u001b[39m# Get batch from replay buffer\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m     state, action, reward, next_state, done \u001b[39m=\u001b[39m replay_buffer\u001b[39m.\u001b[39;49msample(batch_size)\n\u001b[1;32m      6\u001b[0m     \u001b[39m# Convert to tensors. Creating Variables is not necessary with more recent PyTorch versions.\u001b[39;00m\n\u001b[1;32m      7\u001b[0m     state      \u001b[39m=\u001b[39m autograd\u001b[39m.\u001b[39mVariable(torch\u001b[39m.\u001b[39mFloatTensor(np\u001b[39m.\u001b[39mfloat32(state)))\u001b[39m.\u001b[39mto(device)\n",
+      "Cell \u001b[0;32mIn [161], line 15\u001b[0m, in \u001b[0;36mReplayBuffer.sample\u001b[0;34m(self, batch_size)\u001b[0m\n\u001b[1;32m     12\u001b[0m state, action, reward, next_state, done \u001b[39m=\u001b[39m \u001b[39mzip\u001b[39m(\u001b[39m*\u001b[39mrandom\u001b[39m.\u001b[39msample(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbuffer, batch_size))\n\u001b[1;32m     13\u001b[0m \u001b[39m# print(state)\u001b[39;00m\n\u001b[1;32m     14\u001b[0m \u001b[39m# return state, action, reward, next_state, done\u001b[39;00m\n\u001b[0;32m---> 15\u001b[0m \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39;49mconcatenate(state), action, reward, np\u001b[39m.\u001b[39mconcatenate(next_state), done\n",
       "File \u001b[0;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mconcatenate\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: all the input array dimensions for the concatenation axis must match exactly, but along dimension 1, the array at index 0 has size 4 and the array at index 23 has size 2"
+      "\u001b[0;31mValueError\u001b[0m: all the input array dimensions for the concatenation axis must match exactly, but along dimension 1, the array at index 0 has size 4 and the array at index 19 has size 2"
      ]
     }
    ],
